# back-end/src/main/java/com/craftpg/infrastructure/web/controller/NotificationController.java
@@ -2,6 +2,8 @@ package com.craftpg.infrastructure.web.controller;
 
 import com.craftpg.application.mapper.NotificationMapper;
 import com.craftpg.application.usecase.notification.listnotification.ListNotificationUsecase;
+import com.craftpg.application.usecase.notification.listunreadnotification.ListUnreadNotificationUsecase;
+import com.craftpg.application.usecase.notification.markallnotificationread.MarkAllNotificationReadUsecase;
 import com.craftpg.application.usecase.notification.marknotificationread.MarkNotificationReadUsecase;
 import com.craftpg.infrastructure.web.api.NotificationsApi;
 import com.craftpg.infrastructure.web.dto.NotificationResponse;
@@ -17,12 +19,24 @@ import org.springframework.web.bind.annotation.RestController;
 public class NotificationController implements NotificationsApi {
 
     private final ListNotificationUsecase listNotificationUsecase;
+    private final ListUnreadNotificationUsecase listUnreadNotificationUsecase;
+    private final MarkAllNotificationReadUsecase markAllNotificationReadUsecase;
     private final MarkNotificationReadUsecase markNotificationReadUsecase;
     private final NotificationMapper notificationMapper;
 
     @Override
     public ResponseEntity<List<NotificationResponse>> notificationsGet() {
         return ResponseEntity.ok(listNotificationUsecase.execute().stream().map(notificationMapper::toResponse).toList());
+    }
+
+    @Override
+    public ResponseEntity<List<NotificationResponse>> notificationsUnreadGet() {
+        return ResponseEntity.ok(listUnreadNotificationUsecase.execute().stream().map(notificationMapper::toResponse).toList());
+    }
+
+    @Override
+    public ResponseEntity<List<NotificationResponse>> notificationsReadAllPost() {
+        return ResponseEntity.ok(markAllNotificationReadUsecase.execute().stream().map(notificationMapper::toResponse).toList());
     }
 
     @Override
